--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_patient.xml
@@ -237,6 +237,7 @@
                     android:orientation="horizontal">
 
                     <RadioButton
+                        android:id="@+id/genderMale"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -245,6 +246,7 @@
                         android:text="@string/male" />
 
                     <RadioButton
+                        android:id="@+id/genderFemale"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -253,6 +255,7 @@
                         android:text="@string/female" />
 
                     <RadioButton
+                        android:id="@+id/genderOther"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
