--- a/app/src/main/res/layout/my_appointment_child_item.xml
+++ b/app/src/main/res/layout/my_appointment_child_item.xml
@@ -169,6 +169,8 @@
                 android:id="@+id/patientDetailsClickLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_marginBottom="@dimen/dp6">
 
                 <com.rescribe.doctor.ui.customesViews.CircularImageView
