--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -25,32 +25,14 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/bulletImageView"
+            android:layout_toLeftOf="@+id/groupCheckbox"
             android:layout_toRightOf="@id/bulletImageView"
-            android:ellipsize="end"
-            android:maxLines="1"
+            android:layout_toStartOf="@+id/groupCheckbox"
             android:textColor="@color/black"
-            android:textSize="@dimen/sp16"
+            android:textSize="@dimen/sp15"
+            android:paddingBottom="@dimen/dp4"
             app:customFont="@string/roboto_bold"
             tools:text="Shree Clinic - " />
-
-        <com.rescribe.doctor.ui.customesViews.CustomTextView
-            android:id="@+id/clinicAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/clinicNameTextView"
-            android:layout_toLeftOf="@+id/groupCheckbox"
-            android:layout_toRightOf="@id/clinicNameTextView"
-            android:layout_toStartOf="@+id/groupCheckbox"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingEnd="@dimen/dp4"
-            android:paddingRight="@dimen/dp4"
-            android:paddingTop="@dimen/dp3"
-            android:textColor="@color/clinic_address_color"
-            android:textSize="@dimen/sp13"
-            app:customFont="@string/roboto_medium"
-            tools:text="Worli, Mumbaifgfdgfdgfgffvf" />
 
         <LinearLayout
             android:id="@+id/downArrowClickLinearLayout"
@@ -124,6 +106,6 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/my_appointment_child_item"/>
+    <include layout="@layout/my_appointment_child_item" />
 
 </LinearLayout>
