--- a/app/src/main/res/drawable/rectangle_box.xml
+++ b/app/src/main/res/drawable/rectangle_box.xml
@@ -8,5 +8,5 @@
         android:top="0dp" />
     <stroke
         android:width="2dp"
-        android:color="@color/white" />
+        android:color="@color/blue" />
 </shape>
