--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/login_bg"
     android:orientation="vertical">
 
@@ -26,7 +27,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/roboto_medium"
             android:text="@string/your_health"
-            android:textColor="@color/white"
+            android:textColor="@color/blue"
             android:textSize="@dimen/sp16" />
 
         <LinearLayout
@@ -47,7 +48,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp1"
-                android:background="@color/white" />
+                android:background="@color/blue" />
 
 
             <EditText
@@ -61,7 +62,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp1"
-                android:background="@color/white" />
+                android:background="@color/blue" />
 
             <com.rescribe.doctor.ui.customesViews.CustomTextView
                 android:id="@+id/btnOtp"
@@ -76,7 +77,7 @@
                 android:gravity="center_vertical"
                 android:padding="@dimen/dp10"
                 android:text="@string/using_otp"
-                android:textColor="@color/white"
+                android:textColor="@color/blue"
                 android:textSize="@dimen/sp16"
                 android:visibility="invisible"
                 app:customFont="@string/roboto_medium" />
