--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,14 +145,14 @@
     </style>
 
     <style name="AppLoginNewMainStyle">
-        <item name="android:textCursorDrawable">@drawable/cursor_color_white</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color_blue</item>
         <item name="android:cursorVisible">true</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:backgroundTint">@color/transparent</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:gravity">bottom|left</item>
-        <item name="android:textColorHint">@color/white</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/blue</item>
+        <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">@dimen/sp14</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp40</item>
