--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/vitals_dialog_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/vitals_dialog_layout.xml
@@ -7,15 +7,13 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/vitalsDialogLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp10"
-        android:layout_marginRight="@dimen/dp10"
-        android:clickable="true"
-        android:focusable="true"
         android:orientation="vertical"
-        android:padding="@dimen/dp16">
+        android:clickable="true"
+        android:id="@+id/vitalsDialogLayout"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:focusable="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,22 +22,22 @@
             <LinearLayout
                 android:id="@+id/showVitalUnitNameIconLayout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp100"
-                android:layout_marginTop="@dimen/dp40"
+                android:layout_height="100dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/vitals_curve_grey_bg"
                 android:clickable="true"
-                android:focusable="true"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:focusable="true">
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/vitalNameDialog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingTop="@dimen/dp24"
+                    android:paddingTop="24dp"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/sp14"
+                    android:textSize="14sp"
                     app:customFont="@string/roboto_bold" />
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -47,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textSize="@dimen/sp14"
+                    android:textSize="14sp"
                     app:customFont="@string/roboto_medium" />
 
 
@@ -55,14 +53,14 @@
 
             <ImageView
                 android:id="@+id/vitalImageDialog"
-                android:layout_width="@dimen/dp80"
-                android:layout_height="@dimen/dp80"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/circular_shape_vital_bg"
                 android:clickable="true"
-                android:focusable="true"
                 android:padding="@dimen/dp20"
-                tools:src="@drawable/weight" />
+                app:srcCompat="@drawable/weight"
+                android:focusable="true" />
 
         </RelativeLayout>
 
@@ -90,24 +88,24 @@
                     android:orientation="horizontal">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/normal"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/normalRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:paddingTop="@dimen/dp16"
                         android:textColor="@color/range_green"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
 
@@ -119,23 +117,23 @@
                     android:paddingTop="@dimen/dp16">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/moderate"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/moderateRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:textColor="@color/range_yellow"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
 
@@ -147,25 +145,53 @@
                     android:paddingTop="@dimen/dp16">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/severe"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/severeRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:textColor="@color/Red"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/nonCategoryRangeLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/dp16">
+
+                    <com.rescribe.doctor.ui.customesViews.CustomTextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="@string/noncategory"
+                        android:textColor="@color/range_label_color"
+                        android:textSize="14sp"
+                        app:customFont="@string/roboto_medium" />
+
+                    <com.rescribe.doctor.ui.customesViews.CustomTextView
+                        android:id="@+id/nonCategoryRange"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingLeft="@dimen/dp8"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        app:customFont="@string/roboto_medium" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
@@ -173,14 +199,14 @@
         <LinearLayout
             android:id="@+id/showVitalNameLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp100"
+            android:layout_height="100dp"
             android:background="@color/vitals_dialog_grey"
             android:clickable="true"
-            android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:visibility="gone"
-            tools:visibility="visible">
+            tools:visibility="visible"
+            android:focusable="true">
 
             <com.rescribe.doctor.ui.customesViews.CustomTextView
                 android:id="@+id/vitalTypeNameDialog"
@@ -188,7 +214,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:textSize="@dimen/sp14"
+                android:textSize="14sp"
                 app:customFont="@string/roboto_bold" />
 
             <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -196,7 +222,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="@dimen/sp14"
+                android:textSize="14sp"
                 app:customFont="@string/roboto_medium" />
 
 
@@ -208,9 +234,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/vitals_curve_white_bg"
             android:clickable="true"
-            android:focusable="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:focusable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -225,24 +251,24 @@
                     android:orientation="horizontal">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/normal"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/normalSubTypeRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:paddingTop="@dimen/dp16"
                         android:textColor="@color/range_green"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
 
@@ -254,23 +280,23 @@
                     android:paddingTop="@dimen/dp16">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/moderate"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/moderateSubTypeRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:textColor="@color/range_yellow"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
 
@@ -282,23 +308,51 @@
                     android:paddingTop="@dimen/dp16">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="@string/severe"
                         android:textColor="@color/range_label_color"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/severeSubTypeRange"
-                        android:layout_width="@dimen/dp0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingLeft="@dimen/dp8"
                         android:textColor="@color/Red"
-                        android:textSize="@dimen/sp14"
+                        android:textSize="14sp"
+                        app:customFont="@string/roboto_medium" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/noncategorySubTypeRangeLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/dp16">
+
+                    <com.rescribe.doctor.ui.customesViews.CustomTextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="@string/noncategory"
+                        android:textColor="@color/range_label_color"
+                        android:textSize="14sp"
+                        app:customFont="@string/roboto_medium" />
+
+                    <com.rescribe.doctor.ui.customesViews.CustomTextView
+                        android:id="@+id/nonCategorySubTypeRange"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingLeft="@dimen/dp8"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
                         app:customFont="@string/roboto_medium" />
                 </LinearLayout>
             </LinearLayout>
