--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="dialog_radius">15dp</dimen>
     <dimen name="dp0">0dp</dimen>
     <dimen name="dp1">1dp</dimen>
