--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -113,7 +113,7 @@
                     android:gravity="right"
                     android:padding="@dimen/dp6"
                     android:text="@string/forgot_password"
-                    android:textColor="@color/white"
+                    android:textColor="@color/blue"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold"
                     android:visibility="visible" />
@@ -123,7 +123,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/dp10"
                     android:layout_marginRight="@dimen/dp10"
-                    android:background="@color/white"
+                    android:background="@color/blue"
                     android:visibility="gone" />
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -133,7 +133,7 @@
                     android:gravity="center"
                     android:padding="@dimen/dp6"
                     android:text="@string/sign_up"
-                    android:textColor="@color/white"
+                    android:textColor="@color/blue"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold"
                     android:visibility="gone" />
