--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_patients_base_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_patients_base_layout.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:openDrawer="end">
-
-
-    <FrameLayout
-        android:id="@+id/coachmarkContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="10dp" />
 
     <include layout="@layout/common_action_bar" />
 
@@ -32,5 +26,10 @@
         android:fitsSystemWindows="true" />
 
     <include layout="@layout/common_no_records_found" />
+
+    <FrameLayout
+        android:id="@+id/coachmarkContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.v4.widget.DrawerLayout>
