--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/login_bg"
     android:orientation="vertical">
 
@@ -33,10 +32,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp40"
             android:orientation="vertical"
             android:paddingLeft="@dimen/dp30"
-            android:paddingRight="@dimen/dp30"
-            android:layout_marginTop="@dimen/dp40">
+            android:paddingRight="@dimen/dp30">
 
             <EditText
                 android:id="@+id/editTextEmailID"
@@ -107,6 +106,26 @@
                 android:orientation="horizontal">
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
+                    android:id="@+id/changePassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/dp6"
+                    android:text="@string/change_password"
+                    android:textColor="@color/blue"
+                    android:textSize="@dimen/sp14"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <View
+                    android:layout_width="@dimen/dp2"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/dp10"
+                    android:layout_marginRight="@dimen/dp10"
+                    android:background="@color/blue"
+                    android:visibility="gone" />
+
+                <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/forgotPasswordView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -118,83 +137,10 @@
                     android:textStyle="bold"
                     android:visibility="visible" />
 
-                <View
-                    android:layout_width="@dimen/dp2"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/dp10"
-                    android:layout_marginRight="@dimen/dp10"
-                    android:background="@color/blue"
-                    android:visibility="gone" />
-
-                <com.rescribe.doctor.ui.customesViews.CustomTextView
-                    android:id="@+id/signup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="@dimen/dp6"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/blue"
-                    android:textSize="@dimen/sp14"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp30"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dp10"
-            android:layout_marginRight="@dimen/dp10"
-            android:gravity="center_vertical"
-            app:srcCompat="@drawable/or"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/loginUpWithFacebook"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_marginRight="@dimen/dp20"
-            android:layout_marginTop="@dimen/dp16"
-            android:gravity="center_vertical"
-            app:srcCompat="@drawable/fb_logo"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/loginUpWithGmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_marginRight="@dimen/dp20"
-            android:layout_marginTop="@dimen/dp16"
-            android:gravity="center_vertical"
-            app:srcCompat="@drawable/gmail"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/dp8"
-            android:layout_marginTop="@dimen/dp16"
-            android:gravity="center_vertical"
-            app:srcCompat="@drawable/by_continuing_you_accept_the_terms_of_use_and_privacy_policy"
-            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
 
