--- a/app/src/main/res/layouts/patient/add_new_patient/layout/item_doctor_list.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/item_doctor_list.xml
@@ -52,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp15"
+                    android:visibility="gone"
                     app:customFont="@string/roboto_regular"
                     tools:text="test@gmail.com" />
 
