--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
@@ -51,7 +51,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto_regular"
             android:gravity="center|left"
-            android:hint="@string/enter_mobile_no"
+            android:hint="@string/enter_ref_mobile_no"
             android:inputType="number"
             android:maxLength="10"
             android:textColor="@color/black"
