--- a/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
+++ b/app/src/main/res/layouts/patient/add_new_patient/layout/add_new_reference_details.xml
@@ -7,27 +7,134 @@
     android:background="@color/transparent"
     android:orientation="vertical"
     android:padding="@dimen/dp4">
+    <LinearLayout
+        android:id="@+id/referenceDetailPerson"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/salutationSpinnerRef"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:entries="@array/salutation_entries"></Spinner>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/referredByTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:layout_weight="1"
+                android:background="@null"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                app:theme="@style/text_edit">
+
+                <EditText
+                    android:id="@+id/referredBy"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:fontFamily="@font/roboto_regular"
+                    android:gravity="center|left"
+                    android:hint="@string/name"
+                    android:inputType="text"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="@dimen/sp16" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp1"
+            android:background="@color/black"></View>
+
+
+
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:id="@+id/referredPhoneTextInputLayout"
+            android:layout_height="?actionBarSize"
+            android:layout_marginTop="@dimen/dp10"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:visibility="visible"
+            app:theme="@style/text_edit">
+
+            <EditText
+                android:id="@+id/referredPhone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/roboto_regular"
+                android:gravity="center|left"
+                android:hint="@string/enter_ref_mobile_no"
+                android:inputType="number"
+                android:maxLength="10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/sp16" />
+
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/referredEmailTextInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:layout_marginTop="@dimen/dp10"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:visibility="visible"
+            app:theme="@style/text_edit">
+
+            <EditText
+                android:id="@+id/referredEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/roboto_regular"
+                android:gravity="center|left"
+                android:hint="@string/enter_email_id"
+                android:inputType="textEmailAddress"
+                android:maxLength="50"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/sp16" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+
+
+
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/referredByTextInputLayout"
+        android:id="@+id/referredDetailsTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:layout_marginTop="@dimen/dp4"
-        android:layout_weight="1"
-
+        android:layout_marginTop="@dimen/dp10"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:visibility="visible"
+        android:visibility="gone"
         app:theme="@style/text_edit">
 
         <EditText
-            android:id="@+id/referredBy"
+            android:id="@+id/referredDetails"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:fontFamily="@font/roboto_regular"
             android:gravity="center|left"
-            android:hint="@string/name"
+            android:hint="@string/enter_details"
+            android:inputType="text"
             android:maxLength="50"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
@@ -35,54 +142,7 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:id="@+id/referredPhoneTextInputLayout"
-        android:layout_height="?actionBarSize"
-        android:layout_marginTop="@dimen/dp10"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:visibility="visible"
-        app:theme="@style/text_edit">
 
-        <EditText
-            android:id="@+id/referredPhone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/enter_ref_mobile_no"
-            android:inputType="number"
-            android:maxLength="10"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="@dimen/sp16" />
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/referredEmailTextInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:layout_marginTop="@dimen/dp10"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:visibility="visible"
-        app:theme="@style/text_edit">
-
-        <EditText
-            android:id="@+id/referredEmail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/roboto_regular"
-            android:gravity="center|left"
-            android:hint="@string/enter_email_id"
-            android:inputType="textEmailAddress"
-            android:maxLength="50"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="@dimen/sp16" />
-
-    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
