--- a/app/src/main/res/layouts/patient/patient_history/layout/patient_history_list_fragment_container.xml
+++ b/app/src/main/res/layouts/patient/patient_history/layout/patient_history_list_fragment_container.xml
@@ -32,7 +32,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/addRecordButton"
+            android:layout_above="@+id/footer"
+            android:layout_alignParentTop="true"
             android:background="@color/white"
             android:orientation="vertical">
 
@@ -52,65 +53,45 @@
 
         </RelativeLayout>
 
-        <!--<android.support.design.widget.FloatingActionButton
-            android:id="@+id/addNoteFab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/dp16"
-            android:clickable="true"
-            android:focusable="true"
-            app:backgroundTint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_note" />-->
-
-
-        <Button
-            android:id="@+id/addRecordButton"
+        <LinearLayout
+            android:id="@+id/footer"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp35"
+            android:layout_height="@dimen/dp40"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="@dimen/dp2"
-            android:layout_marginLeft="@dimen/dp2"
-            android:layout_toStartOf="@+id/divider"
-            android:layout_toLeftOf="@+id/divider"
-            android:background="@drawable/button_selector"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/add_record"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp14"
-            android:visibility="visible"
-            android:layout_marginBottom="@dimen/dp2"
-            tools:visibility="visible" />
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/dp2"
+            android:paddingEnd="@dimen/dp2"
+            android:paddingBottom="@dimen/dp2">
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="2dp"
-            android:layout_height="@dimen/dp30"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/white" />
+            <Button
+                android:id="@+id/addRecordButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp2"
+                android:layout_weight="1"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/add_record"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp14"
+                android:visibility="visible"
+                tools:visibility="visible" />
 
-        <Button
-            android:id="@+id/addNoteButton"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp35"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:layout_marginEnd="@dimen/dp2"
-            android:layout_marginRight="@dimen/dp2"
-            android:layout_toEndOf="@+id/divider"
-            android:layout_toRightOf="@+id/divider"
-            android:background="@drawable/button_selector"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/add_note"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp14"
-            android:layout_marginBottom="@dimen/dp2"
-            android:visibility="visible"
-            tools:visibility="visible" />
+            <Button
+                android:id="@+id/addNoteButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp2"
+                android:layout_weight="1"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/add_note"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp14"
+                android:visibility="visible"
+                tools:visibility="gone" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
