--- a/app/src/main/res/menu/pen_info.xml
+++ b/app/src/main/res/menu/pen_info.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_settings"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
         android:orderInCategory="100"
         android:title="@string/action_settings"/>
 
     <item
         android:id="@+id/action_save"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
         android:orderInCategory="100"
         android:title="@string/action_save"/>
+
+    <item
+        android:id="@+id/action_disconnect"
+        android:orderInCategory="100"
+        android:title="@string/action_disconnect"/>
 
 </menu>
