--- a/app/src/main/res/layout/content_info.xml
+++ b/app/src/main/res/layout/content_info.xml
@@ -17,7 +17,12 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/tagColor"
-            app:theme="@style/ToolBarStyle" />
+            app:popupTheme="@style/MyMenu"
+            app:subtitleTextAppearance="@style/ToolbarSubtitle"
+            app:theme="@style/ToolBarStyle"
+            app:titleTextAppearance="@style/ToolbarTitle"
+            tools:subtitle="Pune, Aundh, 499983"
+            tools:title="@string/about_doctor" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -29,10 +34,10 @@
 
         <FrameLayout
             android:id="@+id/lineWindow"
-            android:layout_below="@+id/headerMenu"
-            android:layout_above="@+id/footer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/footer"
+            android:layout_below="@+id/headerMenu"
             android:background="#ffffffff">
 
             <com.smart.pen.core.views.MultipleCanvasView
@@ -45,16 +50,38 @@
             android:id="@+id/headerMenu"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp40"
-            android:paddingStart="@dimen/dp10"
-            android:paddingEnd="@dimen/dp10"
             android:layout_alignParentTop="true"
-            android:background="#EAEAEA">
+            android:background="#EAEAEA"
+            android:paddingStart="@dimen/dp10"
+            android:paddingEnd="@dimen/dp10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp30"
                 android:layout_centerVertical="true"
                 android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/locationButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp3"
+                    android:layout_marginEnd="@dimen/dp3"
+                    android:adjustViewBounds="true"
+                    android:padding="@dimen/dp5"
+                    android:tooltipText="Location"
+                    app:srcCompat="@drawable/sp_location" />
+
+                <ImageView
+                    android:id="@+id/calenderButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp3"
+                    android:layout_marginEnd="@dimen/dp3"
+                    android:adjustViewBounds="true"
+                    android:padding="@dimen/dp5"
+                    android:tooltipText="Calender"
+                    app:srcCompat="@drawable/sp_calendar" />
 
                 <ImageView
                     android:id="@+id/undoButton"
@@ -82,18 +109,6 @@
                     android:visibility="gone" />
 
                 <ImageView
-                    android:id="@+id/eraserSizeButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp3"
-                    android:layout_marginEnd="@dimen/dp3"
-                    android:adjustViewBounds="true"
-                    android:padding="@dimen/dp5"
-                    android:src="@drawable/sp_eraser"
-                    android:tooltipText="Eraser Size"
-                    android:visibility="gone" />
-
-                <ImageView
                     android:id="@+id/penSizeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,18 +118,6 @@
                     android:padding="@dimen/dp5"
                     android:src="@drawable/sp_compose"
                     android:tooltipText="Pen Size" />
-
-                <ImageView
-                    android:id="@+id/opacityButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp3"
-                    android:layout_marginEnd="@dimen/dp3"
-                    android:adjustViewBounds="true"
-                    android:padding="@dimen/dp5"
-                    android:visibility="gone"
-                    android:src="@drawable/sp_opacity"
-                    android:tooltipText="Opacity" />
 
                 <ImageView
                     android:id="@+id/penColorButton"
@@ -135,8 +138,8 @@
                     android:layout_marginEnd="@dimen/dp3"
                     android:adjustViewBounds="true"
                     android:padding="@dimen/dp5"
-                    app:srcCompat="@drawable/sp_clean_code"
-                    android:tooltipText="Clear Page" />
+                    android:tooltipText="Clear Page"
+                    app:srcCompat="@drawable/sp_clean_code" />
 
             </LinearLayout>
 
@@ -170,16 +173,29 @@
             android:id="@+id/footer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp34"
-            android:background="#EAEAEA"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:background="#EAEAEA">
+
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:minWidth="@dimen/dp120"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/dp4"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16"
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/button_selector"
+                android:text="@string/save" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_centerVertical="true"
                 android:layout_height="@dimen/dp30"
+                android:layout_centerVertical="true"
+                android:gravity="end|center_vertical"
                 android:paddingStart="@dimen/dp10"
-                android:paddingEnd="@dimen/dp10"
-                android:gravity="end|center_vertical">
+                android:paddingEnd="@dimen/dp10">
 
                 <ImageView
                     android:id="@+id/preButton"
@@ -190,14 +206,15 @@
                     android:adjustViewBounds="true"
                     android:background="@color/transparent"
                     android:rotation="180"
-                    app:srcCompat="@drawable/sp_arrow"
-                    android:tooltipText="Pre Page" />
+                    android:tooltipText="Pre Page"
+                    app:srcCompat="@drawable/sp_arrow" />
 
                 <TextView
                     android:id="@+id/pageCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp3"
+                    android:textColor="@color/black"
                     android:layout_marginEnd="@dimen/dp3"
                     tools:text="1 of 1" />
 
@@ -208,8 +225,8 @@
                     android:layout_marginStart="@dimen/dp3"
                     android:layout_marginEnd="@dimen/dp3"
                     android:adjustViewBounds="true"
-                    app:srcCompat="@drawable/sp_arrow"
-                    android:tooltipText="Next Page" />
+                    android:tooltipText="Next Page"
+                    app:srcCompat="@drawable/sp_arrow" />
 
             </LinearLayout>
         </RelativeLayout>
