--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -65,4 +65,5 @@
     <dimen name="sp22">22sp</dimen>
     <dimen name="dp62">92dp</dimen>
     <dimen name="activity_vertical_margin">12dp</dimen>
+    <dimen name="save_button">100dp</dimen>
 </resources>
