--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -68,5 +68,6 @@
     <dimen name="sp22">22sp</dimen>
     <dimen name="dp62">112dp</dimen>
     <dimen name="activity_vertical_margin">12dp</dimen>
+    <dimen name="save_button">180dp</dimen>
 
 </resources>
